FKM-415 avpublisering av kurs
git-svn-id: http://projects.knowit.no/repos/frikomport/trunk@346 b0a0c851-5f35-0410-b037-9bcbcc8e1326